Add Brokk project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /target
 *.db
+
+### BROKK'S CONFIGURATION ###
+.brokk/**
+/.brokk/workspace.properties
+/.brokk/sessions/
+/.brokk/dependencies/
+/.brokk/history.zip
+!.brokk/style.md
+!.brokk/review.md
+!.brokk/project.properties
