--- a/.brokk/project.properties
+++ b/.brokk/project.properties
@@ -1,4 +1,5 @@
 #Brokk project configuration
-#Mon Nov 03 12:36:30 PST 2025
+#Mon Nov 03 12:36:49 PST 2025
+buildDetailsJson={"buildLintCommand"\:"cargo check --quiet","testAllCommand"\:"cargo test --quiet","testSomeCommand"\:"cargo test --quiet {{\#classes}}{{value}}{{^-last}} {{/-last}}{{/classes}}","excludedDirectories"\:["target"],"environmentVariables"\:{}}
 dataRetentionPolicy=IMPROVE_BROKK
 issuesProviderJson={"type"\:"GITHUB","config"\:{"kind"\:"github","owner"\:"","repo"\:"","host"\:""}}
